--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,19 +16,27 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(ap1_msgs REQUIRED)
 find_package(ackermann_msgs REQUIRED)
 
-add_executable(control_node src/main.cpp)
+add_executable(control_node 
+  src/main.cpp
+  src/control_node.cpp
+)
+
 target_include_directories(control_node PUBLIC 
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>
 )
+
+target_compile_features(control_node PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 ament_target_dependencies(
-  control_node 
-  "rclcpp"
-  "std_msgs"
-  "geometry_msgs"
-  "ackermann_msgs"
+  control_node
+  rclcpp
+  std_msgs
+  geometry_msgs
+  ap1_msgs
+  ackermann_msgs
 )
 
 install(TARGETS 
