--- a/.github/workflows/colcon_build.yml
+++ b/.github/workflows/colcon_build.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-      - colcon_script/logan
   pull_request:
     branches:
       - main
@@ -19,22 +18,27 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          repository: WE-Autopilot/ap1
+          ref: main
 
       - name: Source ROS 2 environment
         run: |
           source /opt/ros/jazzy/setup.bash
           echo "ROS 2 environment sourced"
 
-      - name: Install workspace dependencies
+      - name: Import dependencies
         run: |
-          source /opt/ros/jazzy/setup.bash
-          rosdep update
-          rosdep install --from-paths src --ignore-src -iry
+          mkdir -p src
+          vcs import < .repos
 
-      - name: Build workspace with colcon
+      - name: Build control
         run: |
           source /opt/ros/jazzy/setup.bash
-          colcon build --symlink-install --cmake-args -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+          colcon build \
+          --packages-select ap1_control \
+          --symlink-install \
+          --cmake-args -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
 
       - name: Run tests
         if: ${{ env.RUN_TESTS == 'true' }}
