--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,39 +5,36 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
+find_package(ap1_msgs REQUIRED)
+find_package(yaml-cpp REQUIRED)
 
-add_executable(control_node src/main.cpp)
-target_include_directories(control_node PUBLIC 
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>
-)
-ament_target_dependencies(
-  control_node 
-  "rclcpp"
-  "std_msgs"
-  "geometry_msgs"
+include_directories(
+  include
 )
 
-install(TARGETS 
-  control_node 
+add_executable(control_node
+  src/main.cpp
+)
+
+ament_target_dependencies(control_node
+  rclcpp
+  std_msgs
+  geometry_msgs
+  std_srvs
+  ap1_msgs
+)
+
+target_link_libraries(control_node
+  yaml-cpp
+)
+
+install(TARGETS control_node
   DESTINATION lib/${PROJECT_NAME}
 )
-
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
 
 ament_package()
